// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfusionMatrix > does not break on asymetric data 1`] = `
<DocumentFragment>
  <div
    class="kfp-confusion-matrix"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="kfp-confusion-y-axis-label"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="kfp-confusion-ylabel "
              style="line-height: 79px; min-width: 79px;"
            >
              label2
            </div>
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 12.5%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            4
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 21.875%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            7
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="kfp-confusion-ylabel "
              style="line-height: 79px; min-width: 79px;"
            >
              label1
            </div>
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 9.375%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            3
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 18.75%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            6
          </td>
        </tr>
        <tr>
          <th />
          <th
            class="kfp-confusion-xlabel"
            scope="col"
          >
            <div
              class=""
              style="overflow-wrap: anywhere; width: 79px;"
            >
              label1
            </div>
          </th>
          <th
            class="kfp-confusion-xlabel"
            scope="col"
          >
            <div
              class=""
              style="overflow-wrap: anywhere; width: 79px;"
            >
              label2
            </div>
          </th>
        </tr>
        <tr>
          <td />
          <td
            class="kfp-confusion-x-axis-label"
            colspan="2"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="kfp-confusion-legend"
      style="height: 118.5px;"
    >
      <div
        class="kfp-confusion-legend-notch"
        style="top: 0px;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          8
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 100%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          0
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 80%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          1
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 60%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          3
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 40%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          4
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 20%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix > renders a basic confusion matrix 1`] = `
<DocumentFragment>
  <div
    class="kfp-confusion-matrix"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="kfp-confusion-y-axis-label"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="kfp-confusion-ylabel "
              style="line-height: 79px; min-width: 79px;"
            >
              label2
            </div>
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 3.125%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 12.5%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="kfp-confusion-ylabel "
              style="line-height: 79px; min-width: 79px;"
            >
              label1
            </div>
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 0%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 9.375%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
        <tr>
          <th />
          <th
            class="kfp-confusion-xlabel"
            scope="col"
          >
            <div
              class=""
              style="overflow-wrap: anywhere; width: 79px;"
            >
              label1
            </div>
          </th>
          <th
            class="kfp-confusion-xlabel"
            scope="col"
          >
            <div
              class=""
              style="overflow-wrap: anywhere; width: 79px;"
            >
              label2
            </div>
          </th>
        </tr>
        <tr>
          <td />
          <td
            class="kfp-confusion-x-axis-label"
            colspan="2"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="kfp-confusion-legend"
      style="height: 177.75px;"
    >
      <div
        class="kfp-confusion-legend-notch"
        style="top: 0px;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          8
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 100%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          0
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 80%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          1
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 60%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          3
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 40%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          4
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 20%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix > renders a small confusion matrix snapshot, with no labels or footer 1`] = `
<DocumentFragment>
  <div
    class="kfp-confusion-matrix"
    data-small="true"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 3.125%, var(--card, #fff)); color: var(--foreground, #15171e); height: 32.333333333333336px; min-height: 32.333333333333336px; min-width: 32.333333333333336px; width: 32.333333333333336px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 12.5%, var(--card, #fff)); color: var(--foreground, #15171e); height: 32.333333333333336px; min-height: 32.333333333333336px; min-width: 32.333333333333336px; width: 32.333333333333336px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 0%, var(--card, #fff)); color: var(--foreground, #15171e); height: 32.333333333333336px; min-height: 32.333333333333336px; min-width: 32.333333333333336px; width: 32.333333333333336px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 9.375%, var(--card, #fff)); color: var(--foreground, #15171e); height: 32.333333333333336px; min-height: 32.333333333333336px; min-width: 32.333333333333336px; width: 32.333333333333336px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix > renders only one of the given list of configs 1`] = `
<DocumentFragment>
  <div
    class="kfp-confusion-matrix"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="kfp-confusion-y-axis-label"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="kfp-confusion-ylabel "
              style="line-height: 79px; min-width: 79px;"
            >
              label2
            </div>
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 3.125%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 12.5%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="kfp-confusion-ylabel "
              style="line-height: 79px; min-width: 79px;"
            >
              label1
            </div>
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 0%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="kfp-confusion-cell"
            style="background-color: color-mix(in srgb, var(--primary, #2563d9) 9.375%, var(--card, #fff)); color: var(--foreground, #15171e); height: 79px; min-height: 79px; min-width: 79px; width: 79px;"
          >
            <div
              class="kfp-confusion-overlay"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
        <tr>
          <th />
          <th
            class="kfp-confusion-xlabel"
            scope="col"
          >
            <div
              class=""
              style="overflow-wrap: anywhere; width: 79px;"
            >
              label1
            </div>
          </th>
          <th
            class="kfp-confusion-xlabel"
            scope="col"
          >
            <div
              class=""
              style="overflow-wrap: anywhere; width: 79px;"
            >
              label2
            </div>
          </th>
        </tr>
        <tr>
          <td />
          <td
            class="kfp-confusion-x-axis-label"
            colspan="2"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="kfp-confusion-legend"
      style="height: 177.75px;"
    >
      <div
        class="kfp-confusion-legend-notch"
        style="top: 0px;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          8
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 100%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          0
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 80%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          1
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 60%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          3
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 40%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          4
        </span>
      </div>
      <div
        class="kfp-confusion-legend-notch"
        style="top: 20%;"
      >
        <span
          class="kfp-confusion-legend-label"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
